--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Empresa Social</title>
+    <title>Allivate</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -43,14 +43,14 @@
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
                     <img src="img/logo-2-1280-620.png" class="mb-3" 
-                        width="563" height="278" loading="lazy">
+                        width="390" height="390" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/tema-planeta-1280-1280.png" 
-                alt="A imagem apresenta o símbolo de Sustentabilidade" 
-                title="Sustentabilidade - CC0 Domínio Público" 
+                <img src="img/tema-alleviate-1280-1280.png" 
+                alt="A imagem apresenta a bala da alleviate" 
+                title="Alleviate" 
                 class="img-fluid img-inicio">
 
               </div>
@@ -62,8 +62,14 @@
                     <img src="img/produto-720-900.png" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>Nossa Proposta de Valor</h2>
-                    <p class="p-2">Um negócio social inovador. A proposta é simples, mas impactante: a cada par de tênis vendido, uma árvore deverá ser plantada.</p>
+                    <h2>Conheça a Alleviate!</h2>
+                    <p class="p-2">Sabe aquela sensação de ter a mente nublada depois de um ou dois drinks? 
+                        Aquele momento em que a conversa flui, a diversão acontece, mas a clareza mental começa a ir embora?
+
+
+Apresentamos a bala funcional desenvolvida com dihidromiricetina (DHM), um flavonoide natural com a capacidade de modular os efeitos do álcool no cérebro.
+
+Nossa bala é um suporte discreto para você que busca o equilíbrio perfeito entre a diversão e a consciência. Ela foi projetada para atenuar o efeito de lentidão mental e sonolência causados pelo álcool, permitindo que você mantenha o foco e a clareza para curtir cada momento sem perder a leveza da experiência.</p>
                 </div>
             </div>
         </section>
